--- a/css/style.scss
+++ b/css/style.scss
@@ -39,15 +39,10 @@ header{
         }
     }
 }
-.flex{
-    h2{
-        width: 75%;
-    }
-    p{
-        width: 68%;
-    }
-}
+
 }
     
 // ----------------------------------------------//
 @import './media'; 
+
+// git push -u origin main //
