--- a/css/_media.scss
+++ b/css/_media.scss
@@ -12,6 +12,9 @@
             h2{
                 font-size: 12px;
             }
+            p{
+                font-size: 10px;
+            }
         }
     }
 }
@@ -32,6 +35,9 @@
             h2{
                 font-size: 12px;
             }
+            p{
+                font-size: 11px;
+            }
         }
     }
 }
@@ -49,6 +55,9 @@
         .text{
             h2{
                 font-size: large;
+            }
+            p{
+                font-size: 15px;
             }
         }
     }
