--- a/css/style.scss
+++ b/css/style.scss
@@ -64,6 +64,7 @@
     }
     //? End Header Web Site //
     #About{
+        height: 100vh;
         .text{
             padding: 10px;
             h5{
