--- a/css/style.css
+++ b/css/style.css
@@ -55,15 +55,17 @@ header {
   header .flex button {
     font-size: 20px; }
 
-#About .text {
-  padding: 10px; }
-  #About .text h5 {
-    text-transform: uppercase; }
-  #About .text h2, #About .text p {
-    line-height: 1.7; }
-  #About .text button {
-    font-size: 20px;
+#About {
+  height: 100vh; }
+  #About .text {
     padding: 10px; }
+    #About .text h5 {
+      text-transform: uppercase; }
+    #About .text h2, #About .text p {
+      line-height: 1.7; }
+    #About .text button {
+      font-size: 20px;
+      padding: 10px; }
 
 @media (min-width: 350px) and (max-width: 1300px) {
   .flex h2 {
